--- a/Dockerfile.template
+++ b/Dockerfile.template
@@ -4,7 +4,7 @@ RUN apt-get update && apt-get install -yq python3-pip && apt-get clean && rm -rf
 
 WORKDIR /usr/src/app
 
-RUN pip3 install gpiozero RPi.GPIO thingspeak
+RUN pip3 install gpiozero RPi.GPIO thingspeak requests
 
 COPY . ./
 
